# our-federation

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/oro_federation/: __init__.py  challenges.py  config.py  consent.py  corroboration.py  discovery.py  domain_verification.py  gateway.py  interface.py  models.py  peer_sync.py  peers.py  policies.py  protocol.py  ring_coefficient.py  server.py  sync.py  threat_detector.py  tools.py  trust_policy.py  trust_propagation.py  trust_registry.py  verification.py
src/oro_federation/groups/: __init__.py  exceptions.py  federation.py  members.py  state.py  storage.py  types.py
src/our_federation/: __init__.py  aggregation.py  challenge_store.py  corroboration.py  discovery.py  domain_verification.py  exceptions.py  federation_embedding.py  gateway.py  identity.py  interface.py  models.py  peer_sync.py  policies.py  privacy.py  protocol.py  server.py  sync.py  threat_detector.py  tools.py  trust.py  trust_policy.py  trust_propagation.py  trust_registry.py
src/our_federation/groups/: constants.py  key_package.py  messages.py  operations.py
tests/: conftest.py  test_init.py
tests/federation/: test_aggregation.py  test_challenge_store.py  test_challenges.py  test_consent.py  test_discovery.py  test_domain_verification.py  test_domain_verification_trust.py  test_federation_groups.py  test_gateway.py  test_gateway_key_rotation.py  test_groups.py  test_identity.py  test_issue_177_hardening.py  test_nonces.py  test_peer_exchange.py  test_peer_sync.py  test_policies.py  test_privacy.py  test_privacy_budget_store.py  test_protocol.py  test_ring_coefficient.py  test_server.py  test_sync.py  test_sync_auth.py  test_sync_pagination.py  test_threat_detector.py  test_tls_validation.py  test_tools.py  test_trust.py  test_trust_concentration.py  test_trust_propagation.py  test_trust_registry.py  test_verification.py
