[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "our-federation"
version = "0.1.0"
description = "P2P federation protocol, peer sync, consent, trust propagation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Chris Jacobs" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "our-db>=0.1.0",
    "our-models>=0.1.0",
    "our-confidence>=0.1.0",
    "our-privacy>=0.1.0",
    "our-embeddings>=0.1.0",
    "our-compliance>=0.1.0",
    "cryptography>=41.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiohttp>=3.9",
    "numpy>=1.24",
    "dnspython>=2.4",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/ourochronos/our-federation"
Repository = "https://github.com/ourochronos/our-federation"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/our_federation"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = [
    "E501",  # Line too long — inherited from valence (line-length 150)
    "N818",  # Exception naming — FederationException is intentional
    "B904",  # raise from — inherited from valence
    "B017",  # assert blind exception — inherited from valence
    "B905",  # zip strict — inherited from valence
    "B007",  # unused loop variable — inherited from valence
    "C401",  # unnecessary generator — inherited from valence
]

[tool.ruff.lint.isort]
known-first-party = ["our_federation"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require external services)",
    "slow: Slow tests (>5s)",
]

[tool.coverage.run]
branch = true
source = ["src/our_federation"]

[tool.coverage.report]
show_missing = true
